# azusa

./: .dockerignore  .gitignore  .yarnrc  Cargo.toml  README.md  compose-release.yaml  compose.yaml  docker-compose.yaml
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
.github/workflows/: ci.yaml  rust.yaml
client/: index.html  index.js  index.scss  package-lock.json  package.json
client/components/: download.module.scss  download.tsx  download_list.tsx  item.tsx  item_list.tsx
client/pages/: _app.tsx  index.js  index.tsx
config/: log4rs.yaml
docker/app/: Dockerfile
docker/client/: Dockerfile
docker/nginx/: Dockerfile  dev.conf  nginx.conf
docker/release/: Dockerfile
docker/server/: Dockerfile
front/: .babelrc  package.json
front/src/: index.html  index.js
front/src/Item/: index.js  style.css
front/src/ItemList/: index.js
server/: Cargo.toml
server/src/: downloader.rs  main.rs
server/src/downloader/: item.rs  lock_copy.rs  progress.rs  table.rs
src/: app.rs  cert.rs  client.rs  data_source.rs  download.rs  engine.rs  error.rs  handler.rs  item.rs  lib.rs  lock_copy.rs  main.rs  persist.rs  progress.rs  progress_map.rs  table.rs
src/engine/: downloader.rs  item.rs  output.rs  progress.rs  progress_map.rs
src/handler/: download.rs  request.rs  response.rs
