[package]
name = "azusa"
version = "0.1.0"
edition = "2021"
default-run = "api"

[lib]
doctest = false

[[bin]]
name = "azusa"
test = false

[[bin]]
name = "api"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.12", features = ["rustls-tls-webpki-roots"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v7", "serde"] }
