[package]
name = "azusa"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[[bin]]
name = "azusa"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.7"
axum-embed = "0.1"
async-tempfile = "0.6"
reqwest = { version = "0.12", features = ["rustls-tls-webpki-roots"], default-features = false }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v7", "serde"] }
