[package]
name = "server"
version = "0.1.0"
authors = ["techno-tanoC <develop.tanoc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "e7934a2a3fc23e78be3f93f16096c892ad24481d" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", rev = "e7934a2a3fc23e78be3f93f16096c892ad24481d" }
serde = { version = "1.0", features = [ "derive" ] }
tokio = { version = "1.4", features = [ "full" ] }
